# quantari

./: .env.sample  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: python-test.yml
quantari/: __init__.py  data_processor_unit.py  kafka_client.py  order_management_system.py  strategy_management_system.py  technical_analysis_unit.py  timescale_client.py
quantari/decorators/: __init__.py  catch_and_set_exception.py
quantari/indicators/: __init__.py  ema.py  macd.py  sma.py
quantari/strategies/: __init__.py  signals.py  simple_macd.py
scripts/: clean_db.py  gen-env-sample.sh
tests/: test_data_processor_unit.py  test_kafka_client.py  test_strategy_management_system.py  test_technical_analysis_unit.py  test_timescale_client.py
tests/decorators/: test_catch_and_set_exception.py
tests/indicators/: test_ema.py  test_macd.py  test_sma.py
tests/strategies/: test_simple_macd.py
